--- a/librarycards/Info.plist
+++ b/librarycards/Info.plist
@@ -47,5 +47,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UISupportedExternalAccessoryProtocols</key>
+	<array>
+		<string>com.lilitab.protocol2</string>
+		<string>com.verifone.lilitab</string>
+	</array>
 </dict>
 </plist>
